crates/solidity/testing/snapshots/bindings_output/control/unchecked/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Identifier or MemoryKeyword or StorageKeyword.
   ╭─[ input.sol:4:19 ]
   │
 4 │ ╭─▶         unchecked { return c - b; }
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function sub(uint a, uint b) public returns (uint) {
   │              ─┬─      ┬       ┬  
   │               ╰────────────────── name: 2
   │                       │       │  
   │                       ╰────────── name: 3
   │                               │  
   │                               ╰── name: 4
 3 │         uint c = a;
   │              ┬   ┬  
   │              ╰────── name: 5
   │                  │  
   │                  ╰── ref: 3
 4 │         unchecked { return c - b; }
   │         ────┬────  
   │             ╰────── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 2 │ ╭─▶     function sub(uint a, uint b) public returns (uint) {
   ┆ ┆   
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── definiens: 2
   │
   ├─[ input.sol:1:1 ]
   │
 2 │     function sub(uint a, uint b) public returns (uint) {
   │                  ───┬── ───┬───  
   │                     ╰──────────── definiens: 3
   │                            │     
   │                            ╰───── definiens: 4
 3 │         uint c = a;
   │ ──────────┬─────────  
   │           ╰─────────── definiens: 5
───╯
